--- a/eclipse/.classpath
+++ b/eclipse/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="lib" path="libs/retrofit-1.6.1.jar"/>
 	<classpathentry kind="lib" path="libs/gson-2.3.jar"/>
+	<classpathentry kind="lib" path="libs/guava-17.0.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
